--- a/jarn.html
+++ b/jarn.html
@@ -72,7 +72,7 @@
             const item = document.createElement('div');
             item.className = 'item';
             const img = document.createElement('img');
-            img.src = `bilder/jarn/${folder}/bild.jpg`;
+            img.src = `bilder/jarn/${folder}/bild.png`;
             img.alt = title;
             const h3 = document.createElement('h3');
             h3.textContent = title;
