--- a/jarn.html
+++ b/jarn.html
@@ -16,7 +16,7 @@
   <div id="gallery" class="gallery"></div>
 
   <footer>
-    Kontakt: <a href="mailto:info@example.com">info@example.com</a> | Tel: 012‑345 6789
+    Kontakt: <a href="mailto:info@example.com">info@example.com</a> | Tel: 
   </footer>
 
   <!-- Den här filen genereras av Jekyll: -->
