--- a/jarn.html
+++ b/jarn.html
@@ -1,13 +1,48 @@
+---
+---
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Järn – Bildgalleri</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <style>
+    body { font-family: sans-serif; margin: 0; }
+    header { background: #555; color: #fff; padding: 1rem; text-align: center; }
+    .back { display: block; margin: 1rem 0; color: #333; text-decoration: none; }
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      padding: 2rem;
+      justify-content: center;
+    }
+    .item {
+      max-width: 200px;
+      text-align: center;
+    }
+    .item img {
+      width: 100%;
+      border-radius: 4px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .item h3 {
+      margin: 0.5rem 0 0.2rem;
+      font-size: 1rem;
+    }
+    .item p {
+      margin: 0;
+      font-weight: bold;
+    }
+    footer {
+      background: #eee;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body data-cat="jarn">
-
   <header>
     <h1>Järn</h1>
     <a href="index.html" class="back">← Tillbaka till startsidan</a>
@@ -16,11 +51,39 @@
   <div id="gallery" class="gallery"></div>
 
   <footer>
-    Kontakt: <a href="mailto:info@example.com">info@example.com</a> | Tel: 
+    Kontakt: <a href="mailto:info@example.com">info@example.com</a> | Tel: 012‑345 6789
   </footer>
 
-  <!-- Den här filen genereras av Jekyll: -->
-  <script src="js/products.js"></script>
-  <script src="js/app.js"></script>
+  <script>
+    const products = [
+      {% for f in site.static_files
+           | where_exp:"f","f.name == 'info.txt' and f.path contains 'bilder/jarn/'" %}
+        "{{ f.path | split: '/' | slice: 2,1 | first }}"{% unless forloop.last %},{% endunless %}
+      {% endfor %}
+    ];
+
+    document.addEventListener('DOMContentLoaded', () => {
+      const gallery = document.getElementById('gallery');
+      products.forEach(folder => {
+        fetch(`bilder/jarn/${folder}/info.txt`)
+          .then(r => r.text())
+          .then(text => {
+            const [title, price] = text.trim().split('\n');
+            const item = document.createElement('div');
+            item.className = 'item';
+            const img = document.createElement('img');
+            img.src = `bilder/jarn/${folder}/bild.png`;
+            img.alt = title;
+            const h3 = document.createElement('h3');
+            h3.textContent = title;
+            const p = document.createElement('p');
+            p.textContent = price;
+            item.append(img, h3, p);
+            gallery.appendChild(item);
+          })
+          .catch(_ => console.warn(`Info saknas för ${folder}`));
+      });
+    });
+  </script>
 </body>
 </html>
