--- a/silver.html
+++ b/silver.html
@@ -17,7 +17,7 @@
   <div id="gallery" class="gallery"></div>
 
   <footer>
-    Kontakt: <a href="mailto:info@example.com">info@example.com</a> | Tel: 012‑345 6789
+    Kontakt: <a href="mailto:info@example.com">info@example.com</a> | Tel: 
   </footer>
 
   <script src="js/products.js"></script>
